# browser

./: .gitignore
MinimalBrowser/: CMakeLists.txt  main.cpp
MinimalBrowser/MinimalBrowser.Bridge/: CMakeLists.txt  bridge.cpp
MinimalBrowser/MinimalBrowser.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MinimalBrowser.UI.csproj
